# assets-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/core/: logger.py  settings.py
src/databases/: base.py
src/databases/mongo/: base.py  repository.py
src/databases/redis/: base.py  repository.py
src/services/: parser.py  rate_service.py  rates_service.py  server.py  worker.py  worker_pool.py
