[project]
name = "assets"
version = "0.1.0"
description = "Assets Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.14",
    "motor>=3.7.0",
    "pydantic-settings>=2.8.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "TID", # flake8-tidy-imports
    "T20", # flake8-print
    "I",   # isort
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
